// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeScale should create ticks with configured milliseconds interval for every 2 days case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-01-03T00:00:00.000Z,
  2022-01-05T00:00:00.000Z,
  2022-01-07T00:00:00.000Z,
  2022-01-09T00:00:00.000Z,
  2022-01-11T00:00:00.000Z,
  2022-01-13T00:00:00.000Z,
  2022-01-15T00:00:00.000Z,
  2022-01-17T00:00:00.000Z,
  2022-01-19T00:00:00.000Z,
  2022-01-21T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every 3 weeks case 1`] = `
Array [
  2022-01-16T00:00:00.000Z,
  2022-02-06T00:00:00.000Z,
  2022-02-27T00:00:00.000Z,
  2022-03-20T00:00:00.000Z,
  2022-04-09T23:00:00.000Z,
  2022-04-30T23:00:00.000Z,
  2022-05-21T23:00:00.000Z,
  2022-06-11T23:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every half day case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-01-01T12:00:00.000Z,
  2022-01-02T00:00:00.000Z,
  2022-01-02T12:00:00.000Z,
  2022-01-03T00:00:00.000Z,
  2022-01-03T12:00:00.000Z,
  2022-01-04T00:00:00.000Z,
  2022-01-04T12:00:00.000Z,
  2022-01-05T00:00:00.000Z,
  2022-01-05T12:00:00.000Z,
  2022-01-06T00:00:00.000Z,
  2022-01-06T12:00:00.000Z,
  2022-01-07T00:00:00.000Z,
  2022-01-07T12:00:00.000Z,
  2022-01-08T00:00:00.000Z,
  2022-01-08T12:00:00.000Z,
  2022-01-09T00:00:00.000Z,
  2022-01-09T12:00:00.000Z,
  2022-01-10T00:00:00.000Z,
  2022-01-10T12:00:00.000Z,
  2022-01-11T00:00:00.000Z,
  2022-01-11T12:00:00.000Z,
  2022-01-12T00:00:00.000Z,
  2022-01-12T12:00:00.000Z,
  2022-01-13T00:00:00.000Z,
  2022-01-13T12:00:00.000Z,
  2022-01-14T00:00:00.000Z,
  2022-01-14T12:00:00.000Z,
  2022-01-15T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every hour case 1`] = `
Array [
  2022-01-01T09:00:00.000Z,
  2022-01-01T10:00:00.000Z,
  2022-01-01T11:00:00.000Z,
  2022-01-01T12:00:00.000Z,
  2022-01-01T13:00:00.000Z,
  2022-01-01T14:00:00.000Z,
  2022-01-01T15:00:00.000Z,
  2022-01-01T16:00:00.000Z,
  2022-01-01T17:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every minute case 1`] = `
Array [
  2022-01-01T12:00:00.000Z,
  2022-01-01T12:01:00.000Z,
  2022-01-01T12:02:00.000Z,
  2022-01-01T12:03:00.000Z,
  2022-01-01T12:04:00.000Z,
  2022-01-01T12:05:00.000Z,
  2022-01-01T12:06:00.000Z,
  2022-01-01T12:07:00.000Z,
  2022-01-01T12:08:00.000Z,
  2022-01-01T12:09:00.000Z,
  2022-01-01T12:10:00.000Z,
  2022-01-01T12:11:00.000Z,
  2022-01-01T12:12:00.000Z,
  2022-01-01T12:13:00.000Z,
  2022-01-01T12:14:00.000Z,
  2022-01-01T12:15:00.000Z,
  2022-01-01T12:16:00.000Z,
  2022-01-01T12:17:00.000Z,
  2022-01-01T12:18:00.000Z,
  2022-01-01T12:19:00.000Z,
  2022-01-01T12:20:00.000Z,
  2022-01-01T12:21:00.000Z,
  2022-01-01T12:22:00.000Z,
  2022-01-01T12:23:00.000Z,
  2022-01-01T12:24:00.000Z,
  2022-01-01T12:25:00.000Z,
  2022-01-01T12:26:00.000Z,
  2022-01-01T12:27:00.000Z,
  2022-01-01T12:28:00.000Z,
  2022-01-01T12:29:00.000Z,
  2022-01-01T12:30:00.000Z,
  2022-01-01T12:31:00.000Z,
  2022-01-01T12:32:00.000Z,
  2022-01-01T12:33:00.000Z,
  2022-01-01T12:34:00.000Z,
  2022-01-01T12:35:00.000Z,
  2022-01-01T12:36:00.000Z,
  2022-01-01T12:37:00.000Z,
  2022-01-01T12:38:00.000Z,
  2022-01-01T12:39:00.000Z,
  2022-01-01T12:40:00.000Z,
  2022-01-01T12:41:00.000Z,
  2022-01-01T12:42:00.000Z,
  2022-01-01T12:43:00.000Z,
  2022-01-01T12:44:00.000Z,
  2022-01-01T12:45:00.000Z,
  2022-01-01T12:46:00.000Z,
  2022-01-01T12:47:00.000Z,
  2022-01-01T12:48:00.000Z,
  2022-01-01T12:49:00.000Z,
  2022-01-01T12:50:00.000Z,
  2022-01-01T12:51:00.000Z,
  2022-01-01T12:52:00.000Z,
  2022-01-01T12:53:00.000Z,
  2022-01-01T12:54:00.000Z,
  2022-01-01T12:55:00.000Z,
  2022-01-01T12:56:00.000Z,
  2022-01-01T12:57:00.000Z,
  2022-01-01T12:58:00.000Z,
  2022-01-01T12:59:00.000Z,
  2022-01-01T13:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every month case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-02-01T00:00:00.000Z,
  2022-03-01T00:00:00.000Z,
  2022-03-31T23:00:00.000Z,
  2022-04-30T23:00:00.000Z,
  2022-05-31T23:00:00.000Z,
  2022-06-30T23:00:00.000Z,
  2022-07-31T23:00:00.000Z,
  2022-08-31T23:00:00.000Z,
  2022-09-30T23:00:00.000Z,
  2022-11-01T00:00:00.000Z,
  2022-12-01T00:00:00.000Z,
  2023-01-01T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every two months case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-03-01T00:00:00.000Z,
  2022-04-30T23:00:00.000Z,
  2022-06-30T23:00:00.000Z,
  2022-08-31T23:00:00.000Z,
  2022-11-01T00:00:00.000Z,
  2023-01-01T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every year case 1`] = `
Array [
  2021-01-01T00:00:00.000Z,
  2022-01-01T00:00:00.000Z,
  2023-01-01T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured milliseconds interval for every year, negative milliseconds case 1`] = `
Array [
  2021-01-01T00:00:00.000Z,
  2022-01-01T00:00:00.000Z,
  2023-01-01T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every 3 days case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-01-04T00:00:00.000Z,
  2022-01-07T00:00:00.000Z,
  2022-01-10T00:00:00.000Z,
  2022-01-13T00:00:00.000Z,
  2022-01-16T00:00:00.000Z,
  2022-01-19T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every 6 months case 1`] = `
Array [
  2021-01-01T00:00:00.000Z,
  2021-06-30T23:00:00.000Z,
  2022-01-01T00:00:00.000Z,
  2022-06-30T23:00:00.000Z,
  2023-01-01T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every day case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-01-02T00:00:00.000Z,
  2022-01-03T00:00:00.000Z,
  2022-01-04T00:00:00.000Z,
  2022-01-05T00:00:00.000Z,
  2022-01-06T00:00:00.000Z,
  2022-01-07T00:00:00.000Z,
  2022-01-08T00:00:00.000Z,
  2022-01-09T00:00:00.000Z,
  2022-01-10T00:00:00.000Z,
  2022-01-11T00:00:00.000Z,
  2022-01-12T00:00:00.000Z,
  2022-01-13T00:00:00.000Z,
  2022-01-14T00:00:00.000Z,
  2022-01-15T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every hour case 1`] = `
Array [
  2022-01-01T09:00:00.000Z,
  2022-01-01T10:00:00.000Z,
  2022-01-01T11:00:00.000Z,
  2022-01-01T12:00:00.000Z,
  2022-01-01T13:00:00.000Z,
  2022-01-01T14:00:00.000Z,
  2022-01-01T15:00:00.000Z,
  2022-01-01T16:00:00.000Z,
  2022-01-01T17:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every minute case 1`] = `
Array [
  2022-01-01T12:00:00.000Z,
  2022-01-01T12:01:00.000Z,
  2022-01-01T12:02:00.000Z,
  2022-01-01T12:03:00.000Z,
  2022-01-01T12:04:00.000Z,
  2022-01-01T12:05:00.000Z,
  2022-01-01T12:06:00.000Z,
  2022-01-01T12:07:00.000Z,
  2022-01-01T12:08:00.000Z,
  2022-01-01T12:09:00.000Z,
  2022-01-01T12:10:00.000Z,
  2022-01-01T12:11:00.000Z,
  2022-01-01T12:12:00.000Z,
  2022-01-01T12:13:00.000Z,
  2022-01-01T12:14:00.000Z,
  2022-01-01T12:15:00.000Z,
  2022-01-01T12:16:00.000Z,
  2022-01-01T12:17:00.000Z,
  2022-01-01T12:18:00.000Z,
  2022-01-01T12:19:00.000Z,
  2022-01-01T12:20:00.000Z,
  2022-01-01T12:21:00.000Z,
  2022-01-01T12:22:00.000Z,
  2022-01-01T12:23:00.000Z,
  2022-01-01T12:24:00.000Z,
  2022-01-01T12:25:00.000Z,
  2022-01-01T12:26:00.000Z,
  2022-01-01T12:27:00.000Z,
  2022-01-01T12:28:00.000Z,
  2022-01-01T12:29:00.000Z,
  2022-01-01T12:30:00.000Z,
  2022-01-01T12:31:00.000Z,
  2022-01-01T12:32:00.000Z,
  2022-01-01T12:33:00.000Z,
  2022-01-01T12:34:00.000Z,
  2022-01-01T12:35:00.000Z,
  2022-01-01T12:36:00.000Z,
  2022-01-01T12:37:00.000Z,
  2022-01-01T12:38:00.000Z,
  2022-01-01T12:39:00.000Z,
  2022-01-01T12:40:00.000Z,
  2022-01-01T12:41:00.000Z,
  2022-01-01T12:42:00.000Z,
  2022-01-01T12:43:00.000Z,
  2022-01-01T12:44:00.000Z,
  2022-01-01T12:45:00.000Z,
  2022-01-01T12:46:00.000Z,
  2022-01-01T12:47:00.000Z,
  2022-01-01T12:48:00.000Z,
  2022-01-01T12:49:00.000Z,
  2022-01-01T12:50:00.000Z,
  2022-01-01T12:51:00.000Z,
  2022-01-01T12:52:00.000Z,
  2022-01-01T12:53:00.000Z,
  2022-01-01T12:54:00.000Z,
  2022-01-01T12:55:00.000Z,
  2022-01-01T12:56:00.000Z,
  2022-01-01T12:57:00.000Z,
  2022-01-01T12:58:00.000Z,
  2022-01-01T12:59:00.000Z,
  2022-01-01T13:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every month case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-02-01T00:00:00.000Z,
  2022-03-01T00:00:00.000Z,
  2022-03-31T23:00:00.000Z,
  2022-04-30T23:00:00.000Z,
  2022-05-31T23:00:00.000Z,
  2022-06-30T23:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every two months case 1`] = `
Array [
  2022-01-01T00:00:00.000Z,
  2022-03-01T00:00:00.000Z,
  2022-04-30T23:00:00.000Z,
  2022-06-30T23:00:00.000Z,
  2022-08-31T23:00:00.000Z,
  2022-11-01T00:00:00.000Z,
  2023-01-01T00:00:00.000Z,
]
`;

exports[`TimeScale should create ticks with configured time interval for every year case 1`] = `
Array [
  2021-01-01T00:00:00.000Z,
  2022-01-01T00:00:00.000Z,
  2023-01-01T00:00:00.000Z,
]
`;
